# audiobook

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  README.md  audiobook.pro  audiohelper.cpp  audiohelper.h  audioplayer.cpp  audioplayer.h  audioutil.cpp  book.cpp  book.h  build.py  install.sh  install_cmake.sh  library.cpp  library.h  librarymodel.cpp  librarymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  playlist.cpp  playlist.h  resources.qrc  settings.cpp  settings.h  stretchingheader.cpp  taglib.pro
android/: AndroidManifest.xml
android/res/drawable/: splash.xml
android/res/values/: colors.xml  style.xml
res/: bitshift.audiobook.desktop  io.bit-shift.audiobook.appdata.xml  io.bit-shift.audiobook.desktop  io.bitshift.audiobook.appdata.xml  io.bitshift.audiobook.desktop  res.qrc  resources.qrc
resources/: io.bit-shift.audiobook.appdata.xml  io.bit-shift.audiobook.desktop  resources.qrc
src/: audioutil.cpp  audioutil.h  book.cpp  book.h  chapter.cpp  chapter.h  chaptermodel.cpp  chaptermodel.h  database.cpp  database.h  fileproxymodel.cpp  fileproxymodel.h  library.cpp  library.h  libraryfilterproxy.cpp  libraryfilterproxy.h  librarymodel.cpp  librarymodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  player.cpp  player.h  qml.qrc  qtquickcontrols2.conf  settings.cpp  settings.h  shortcut.cpp  shortcut.h  shortcuts.cpp  shortcuts.h  stretchingheader.h  util.cpp  util.h
src/qml/: Bounds.qml  ChapterPage.qml  ControlPage.qml  DurationPicker.qml  FilePicker.qml  LibraryPage.qml  ListViewPicker.qml  MainPage.qml  NavigationPage.qml  SettingsPage.qml  Spacer.qml  main.qml
src/qml/Style/: Button.qml  ImageButton.qml  Label.qml  ListSeparator.qml  Menu.qml  MenuItem.qml  Separator.qml  Slider.qml  Spacer.qml  Style.qml  TextField.qml
src/taglib/: taglib_export.h
